Bug 395142 - Vector layers nullify Transparency Masks added to Paint layers when exporting to PNG.
Summary: Vector layers nullify Transparency Masks added to Paint layers when exporting...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-08 10:39 UTC by mvowada
Modified: 2018-06-26 15:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
example (215.75 KB, image/png)
2018-06-08 10:39 UTC, mvowada
Details
video example (733.43 KB, video/mp4)
2018-06-08 10:48 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-06-08 10:39:35 UTC
Created attachment 113147 [details]
example

(Krita Version: 4.1.0-pre-alpha (git ab670ba) - Ubuntu 14.04.5 LTS)

Vector layers seem to void the Transparency Mask added to other Paint layers when exporting to PNG. Steps:

1. new vector layer + fill it with vector shapes
3. new paint layer + draw strokes that overlap with vector layer
5. CTRL + R and click-drag to select a few overlapping areas
6. add a Transparency Mask to the paint layer
7. hide the vector layer
8. export to PNG

Actual Results: Transparency Mask get ignored when exporting to PNG.
Expected Results: don't let vectors to interfere with Transparency Masks of other layers.
Comment 1 mvowada 2018-06-08 10:48:22 UTC
Created attachment 113148 [details]
video example
Comment 2 Dmitry Kazakov 2018-06-18 13:20:06 UTC
Yes, I can confirm :)
Comment 3 Dmitry Kazakov 2018-06-20 11:52:11 UTC
Git commit 9da349553967ef5f3e0a233605fc232aeaf86589 by Dmitry Kazakov.
Committed on 20/06/2018 at 11:51.
Pushed by dkazakov into branch 'master'.

Make a correct copy of a projection device when cloning a layer

Some time ago we disabled updates after duplicating a layer. Therefore,
we should also copy the projection device. Otherwise, it will lazily
initialized with the content of the original device, which is not what
we usually want.

M  +16   -0    libs/image/kis_layer.cc

https://commits.kde.org/krita/9da349553967ef5f3e0a233605fc232aeaf86589
Comment 4 Halla Rempt 2018-06-20 13:38:33 UTC
Git commit bbb4b37e497f23d7547cdccd5977b67d2dfcf85f by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 20/06/2018 at 13:12.
Pushed by rempt into branch 'krita/4.1'.

Make a correct copy of a projection device when cloning a layer

Some time ago we disabled updates after duplicating a layer. Therefore,
we should also copy the projection device. Otherwise, it will lazily
initialized with the content of the original device, which is not what
we usually want.

M  +16   -0    libs/image/kis_layer.cc

https://commits.kde.org/krita/bbb4b37e497f23d7547cdccd5977b67d2dfcf85f
Comment 5 Andrey 2018-06-26 15:11:55 UTC
Git commit f80bef80b88e69f16f2ee4fb420c7de76ae8ab94 by Andrey Kamakin, on behalf of Dmitry Kazakov.
Committed on 26/06/2018 at 14:18.
Pushed by akamakin into branch 'akamakin/T8628-multithreading-optimization'.

Make a correct copy of a projection device when cloning a layer

Some time ago we disabled updates after duplicating a layer. Therefore,
we should also copy the projection device. Otherwise, it will lazily
initialized with the content of the original device, which is not what
we usually want.

M  +16   -0    libs/image/kis_layer.cc

https://commits.kde.org/krita/f80bef80b88e69f16f2ee4fb420c7de76ae8ab94