Make a correct copy of a projection device when cloning a layer

Some time ago we disabled updates after duplicating a layer. Therefore,
we should also copy the projection device. Otherwise, it will lazily
initialized with the content of the original device, which is not what
we usually want.

BUG:395142